# Lunaria

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  Dockerfile  README.md  README_ja.md  README_ua.md  compile.client.sh  compile.proto.sh  compile.server.sh  debug.client.sh  debug.server.sh  git.sh  index.html  run.client.sh  run.server.sh  update.texts.js.sh  zzz.txt
.github/: FUNDING.yml
.github/workflows/: static.yml  texts.js.yml  update_submodules.yml
Entities/: Contact.cpp  Contact.h  Message.cpp  Message.h  User.cpp  User.h  json.hpp  nexus_helpers.h
Helpers/: ConnectionManager.cpp  ConnectionManager.h  PeerHandler.cpp  PeerHandler.h  ScreenCapture.cpp  ScreenCapture.h  fileChecks.hpp
Helpers/ArenaMemoryResource/: ArenaMemoryResource.hpp
Helpers/AuthManager/: AuthManager.cpp  AuthManager.h  auth_manager  c.sh  main.cpp
Helpers/ConnectionManager/: ConnectionManager.cpp  ConnectionManager.h  README.md
Helpers/Encryption/: EncryptionManager.cpp  EncryptionManager.h  README.md
Helpers/PeerHandler/: PeerHandler.cpp  PeerHandler.h  README.md
Helpers/ScreenCapture/: README.md  ScreenCapture.h
Linux/: README.md
MsQuic/Win_arm64/lib/: msquic.lib
MsQuic/Win_x64/lib/: msquic.lib
NetBird/: CMakeLists.txt  VpnManager.cpp  VpnManager.h  test.vpn.cpp
NetBird/client/: README.md  client.vpn.cpp
NetBird/server/: README.md  server.vpn.cpp
Wayland/: README.md  compile.sh  main.cpp  screencapture  test.c  test.h  wayland  wlr-screencopy-unstable-v1-client-protocol.h  wlr-screencopy-unstable-v1-protocol.c
Windows/: README.md
absl-libs/: libabsl_cord.so.2401.0.0  libabsl_log_internal_check_op.so.2401.0.0  libabsl_log_internal_message.so.2401.0.0
certs/: README.md  server.cert  server.key
chatbot/: CLI.lua  README.md
client/: QuicClient.cpp  QuicClient.h  QuicResponse.hpp  README.md  client.cpp
client/clientListenerModule/: CMakeLists.txt  ClientListener.cpp  ClientListener.h  test.cpp
client/clientPeerHandler/: ClientPeerHandler.cpp  ClientPeerHandler.h
client/clientRequestManager/: RequestManager.cpp  RequestManager.h
db/: DbManager.cpp  DbManager.h  README.md  run.scripsts.sh  run.scripts.sharded.db.sh
db/Postgress/: DbManager.cpp  DbManager.h
db/Postgress/sql/: README.md  blocked_users.sql  encrypt_keys.sql  messages.sql  reports.sql  servers.sql  users.sql
db/Scylla/: ScyllaManager.cpp  ScyllaManager.h  test.cpp
db/Scylla/cql/: README.md  contacts.cql  messages.cql  server.cql  userCreds.cql  users.cql
db/scripts/: drop.sh  run.scripsts.sh  run.scripts.cql.sh
db/sql/: README.md  blocked_users.sql  calls.sql  contacts.sql  encrypt_keys.sql  messages.sql  psql.sql  reports.sql  servers.sql  users.sql
docs/: Client.md  FAQ.md  Server.md
error-manager/: ErrorManager.h
github-pages/: index.css  pages.css
github-pages/js/: index.js  texts.js
lua-customization/: README.md  conf.lua  conf2.lua
lua-customization/Themes/Arch/: conf.lua
lua-customization/lutm-files/: extracted_conf.lua  lutmCreator.cpp  main  theme.lutm
luaCustomization/: README.md  conf.dispatch.lua  conf.lua
luaCustomization/Themes/: README.md
native/: README.md  binding.gyp  hello.cc
proto/: README.md  audio_stream.proto  auth.proto  authResponse.proto  contact.proto  encrypt_key.proto  error.proto  fetch_response.proto  invite_link.proto  message.proto  report.proto  rpc_body.proto  rpc_request.proto  rpc_response.proto  server.proto  sign_in.proto  sign_up.proto  test.pb.cc  test.pb.h  test.proto  user.proto  video_stream.proto  vpn_graph.proto  wrapper.pb.cc  wrapper.pb.h  wrapper.proto
protobuf/: libprotobuf.so.27
route-manager/: README.md  RouteManager.cpp  RouteManager.h  Routes.hpp
server/: QuicServer.cpp  QuicServer.h  README copy.md  server.cpp
tests/: CMakeLists.txt  README.md  run.client.sh  test.client.cpp  test.client.sh  test.proto.cpp  test.proto.sh  test.server.cpp  test.server.sh
tokio-cpp/: README.md  ThreadPool.cpp  ThreadPool.h
